k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: 182399717976.dkr.ecr.us-east-1.amazonaws.com/my_app:latest
        name: my-app
        ports:
        - containerPort: 3000
